# DAW_Proyect

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  project.dawp
projectFile/: main.cpp  project_file.cpp  project_file.hpp
src/: CMakeLists.txt
src/audioDecoder/: CMakeLists.txt
src/audioDecoder/include/: decoder.hpp  wav_decoder.hpp
src/audioDecoder/src/: decoder.cpp  wav_decoder.cpp
src/projectFile/: CMakeLists.txt
src/projectFile/include/: project_file.hpp
src/projectFile/src/: project_file.cpp
unit_tests/: CMakeLists.txt  UTDecoder.cpp  UTProjectFF.cpp  UTportaudioex.cpp
unit_tests/include/: UT_audio.hpp  format.hpp
unit_tests/test_files/projectFile/: project.dawp
